# playground-libre

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
docs/: codeing_guidelines.md  eclipse_macro.xml  note.md
examples/: CMakeLists.txt
examples/dns_client/: CMakeLists.txt  dns_client.c
examples/helloworld/: CMakeLists.txt  main.c
examples/http_client/: CMakeLists.txt  http_client.c
examples/https_client/: CMakeLists.txt  https_client.c
examples/sip_ua/: CMakeLists.txt
examples/tcp_server/: CMakeLists.txt  tcp_server.c
examples/timer_demo/: timer_demo.c
examples/udp_server/: CMakeLists.txt
examples/websocket_server/: CMakeLists.txt
